--- a/package.json
+++ b/package.json
@@ -15,14 +15,11 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "html5-qrcode": "^2.3.8",
-    "lucide-react": "^0.525.0",
     "lucide-vue-next": "^0.525.0",
     "pinia": "^3.0.3",
-    "radix-vue": "^1.9.17",
     "reka-ui": "^2.4.1",
-    "shadcn-vue": "^2.2.0",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
     "vue-sonner": "^2.0.2"
@@ -37,6 +34,7 @@
     "tw-animate-css": "^1.3.6",
     "typescript": "~5.8.3",
     "vite": "^7.0.4",
+    "vue-component-type-helpers": "^3.0.4",
     "vue-tsc": "^2.2.12"
   }
 }
